--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1447,3 +1447,153 @@ button.swiper-pagination-bullet {
   top: 58%;
   left: 45%;
 }
+
+.started {
+  padding: 90px 0;
+  background: -o-linear-gradient(220.68deg, #6888FF 12.77%, #5E80FF 73.11%);
+  background: linear-gradient(229.32deg, #6888FF 12.77%, #5E80FF 73.11%);
+  text-align: center;
+}
+
+.started__inner {
+  margin: 0 auto;
+}
+
+.started__subtitle {
+  font-family: Roboto;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 12px;
+  letter-spacing: 0.1em;
+  color: white;
+}
+
+.started__title {
+  font-family: Quicksand;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 60px;
+  color: white;
+}
+
+.started__title--span {
+  font-weight: 500;
+}
+
+.started__text {
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 29px;
+  letter-spacing: 0.03em;
+  color: white;
+}
+
+.started__btn {
+  font-family: Quicksand;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 16px;
+  padding: 13px 17px;
+  background-color: white;
+}
+
+.started__btn:nth-child(2) {
+  background: transparent;
+  border: 1px solid #A0B4FF;
+  color: #c7d3ff;
+}
+
+.news {
+  padding: 120px 0;
+}
+
+.news__title {
+  font-family: Quicksand;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23px;
+  color: #3d4f9f;
+}
+
+.news__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.news__text {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0.03em;
+  color: #8d96bd;
+}
+
+.news__form-input {
+  background-color: #EFEFF7;
+  min-width: 280px;
+  min-height: 60px;
+  border-radius: 5px;
+}
+
+.news__form-input::-webkit-input-placeholder {
+  padding-left: 25px;
+  font-family: Quicksand;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 16px;
+  color: #7a85ad;
+}
+
+.news__form-input::-moz-placeholder {
+  padding-left: 25px;
+  font-family: Quicksand;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 16px;
+  color: #7a85ad;
+}
+
+.news__form-input:-ms-input-placeholder {
+  padding-left: 25px;
+  font-family: Quicksand;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 16px;
+  color: #7a85ad;
+}
+
+.news__form-input::-ms-input-placeholder {
+  padding-left: 25px;
+  font-family: Quicksand;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 16px;
+  color: #7a85ad;
+}
+
+.news__form-input::placeholder {
+  padding-left: 25px;
+  font-family: Quicksand;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 16px;
+  color: #7a85ad;
+}
+
+.news__btn {
+  width: 185px;
+  height: 60px;
+  background-color: #4D6CE1;
+  color: white;
+  font-family: Quicksand;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 16px;
+  border-radius: 5px;
+}
